--- a/akan.css
+++ b/akan.css
@@ -22,3 +22,8 @@ html{
     border-radius: 20px;
     border-color: white;
 }
+.start a {
+    text-decoration: none;
+    color: white;
+    display: block;
+}
